--- a/index.html
+++ b/index.html
@@ -10,6 +10,72 @@
 <body>
     
     <!-- Content goes here -->
+	<!-- Header -->
+    <header>
+        <h1>Job Application Tracker</h1>
+        <p>Track your applications, interviews, and offers</p>
+    </header>
+
+    <!-- Main Container -->
+    <main>
+        <!-- Add Application Form -->
+        <section id="add-application-section">
+            <h2>Add New Application</h2>
+            <form id="application-form">
+                <div class="form-group">
+                    <label for="company">Company Name *</label>
+                    <input type="text" id="company" name="company" required placeholder="e.g. Google">
+                </div>
+
+                <div class="form-group">
+                    <label for="role">Role *</label>
+                    <input type="text" id="role" name="role" required placeholder="e.g. Software Engineer">
+                </div>
+
+                <div class="form-group">
+                    <label for="date">Date Applied *</label>
+                    <input type="date" id="date" name="date" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="status">Status *</label>
+                    <select id="status" name="status" required>
+                        <option value="">-- Select Status --</option>
+                        <option value="Applied">Applied</option>
+                        <option value="Phone Screen">Phone Screen</option>
+                        <option value="Technical Interview">Technical Interview</option>
+                        <option value="Final Round">Final Round</option>
+                        <option value="Offer">Offer</option>
+                        <option value="Rejected">Rejected</option>
+                    </select>
+                </div>
+
+                <div class="form-group checkbox-group">
+                    <label>
+                        <input type="checkbox" id="visa" name="visa">
+                        Visa Sponsorship Available
+                    </label>
+                </div>
+
+                <button type="submit" id="submit-btn">Add Application</button>
+            </form>
+        </section>
+
+        <!-- Applications Display -->
+        <section id="applications-section">
+            <h2>My Applications</h2>
+            <div id="applications-container">
+                <!-- Applications will be displayed here -->
+                <p id="no-apps-message">No applications yet. Add your first one above!</p>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Built by Zawadi MC Nyachiya | <a href="https://github.com/Z3DDIEZ/ProjectUn26" target="_blank">View on GitHub</a></p>
+    </footer>
+	
 	<!-- Firebase SDKs -->
 	<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database-compat.js"></script>
