--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Built by Zawadi MC Nyachiya | <a href="https://github.com/Z3DDIEZ/ProjectUn26" target="_blank">View on GitHub</a></p>
+        <p>Built by Zawadi MC Nyachiya | <a href="https://github.com/Z3DDIEZ/Job-Tracker-Zawadi" target="_blank">View on GitHub</a></p>
     </footer>
 	
 	<!-- Firebase SDKs -->
