Final design and features complete

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name = "description" content = "A simple job application tracker to help you manage your job applications, interviews, and offers. Built with HTML, CSS, JavaScript, and Firebase Realtime Database.">
+    <title>Job Application Tracker | Zawadi MC Nyachiya</title>
     <!-- Link to CSS stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
