--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Job Application Tracker | Zawadi MC Nyachiya</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="alternate icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/pwa-192.png">
+    <meta name="theme-color" content="#0f172a">
     <!-- Content Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.gstatic.com https://*.firebaseio.com https://*.firebasedatabase.app https://apis.google.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://*.firebaseio.com https://*.firebasedatabase.app https://identitytoolkit.googleapis.com https://securetoken.googleapis.com https://accounts.google.com wss://*.firebaseio.com wss://*.firebasedatabase.app https://www.gstatic.com; font-src 'self' data:; frame-src 'self' https://*.firebaseapp.com https://*.google.com;">
     <!-- Link to CSS stylesheet -->
